update category id on fe table
