# docs/swagger.json
@@ -115,7 +115,7 @@
         "description": "API Create Category",
         "tags": ["category"],
         "summary": "API Create Category",
-        "parameter": [
+        "parameters": [
           {
             "description": "Create Category",
             "name": "category",
@@ -159,7 +159,7 @@
         "description": "Get By ID Category",
         "tags": ["category"],
         "summary": "Get By ID Category",
-        "parameter": {
+        "parameters": {
           "name": "categoryID",
           "in": "path",
           "required": true
@@ -208,7 +208,7 @@
         "description": "Update By ID Category",
         "tags": ["category"],
         "summary": "Update By ID Category",
-        "parameter": {
+        "parameters": {
           "name": "categoryID",
           "in": "path",
           "required": true
@@ -255,7 +255,7 @@
         "description": "Delete By ID Category",
         "tags": ["category"],
         "summary": "Delete By ID Category",
-        "parameter": {
+        "parameters": {
           "name": "categoryID",
           "in": "path",
           "required": true
@@ -351,7 +351,7 @@
         "description": "Create Content",
         "tags": ["content"],
         "summary": "Create Content",
-        "parameter": [
+        "parameters": [
           {
             "description": "Create Content",
             "name": "content",
@@ -385,7 +385,7 @@
         }
       }
     },
-    "admin/contents/{contentID}" : {
+    "/admin/contents/{contentID}" : {
       "get" : {
         "security": [
           {
@@ -395,7 +395,7 @@
         "description": "Get By ID Content",
         "tags": ["content"],
         "summary": "Get By ID Content",
-        "parameter": {
+        "parameters": {
           "name": "contentID",
           "in": "path",
           "required": true
@@ -444,7 +444,7 @@
         "description": "Update By ID Content",
         "tags": ["content"],
         "summary": "Update By ID Content",
-        "parameter": {
+        "parameters": {
           "name": "contentID",
           "in": "path",
           "required": true
@@ -491,7 +491,7 @@
         "description": "Delete By ID Content",
         "tags": ["content"],
         "summary": "Delete By ID Content",
-        "parameter": {
+        "parameters": {
           "name": "contentID",
           "in": "path",
           "required": true
@@ -520,7 +520,7 @@
         }
       }
     },
-    "admin/contents/upload-image" : {
+    "/admin/contents/upload-image" : {
       "post" : {
         "security": [
           {
@@ -555,6 +555,198 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/DefaultResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/fe/categories" : {
+      "get": {
+        "description": "API Category",
+        "tags": ["fe"],
+        "summary": "API Category",
+        "responses": {
+          "200": {
+            "description": "success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "allOf": [
+                    {
+                      "$ref": "#/components/schemas/DefaultResponse"
+                    },
+                    {
+                      "type": "object",
+                      "properties": {
+                        "data": {
+                          "type": "array",
+                          "items": {
+                            "$ref": "#/components/schemas/CategoryResponse"
+                          }
+                        }
+                      }
+                    }
+                  ]
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/fe/contents" : {
+      "get": {
+        "description": "Get Contents",
+        "tags": ["fe"],
+        "summary": "Get Contents",
+        "parameters" : [
+          {
+            "in" : "query",
+            "name" : "limit",
+            "schema" : {
+              "type" : "integer",
+              "minimum" : 1,
+              "default" : 10
+            }
+          },
+          {
+            "in" :  "query",
+            "name" : "page",
+            "schema" : {
+              "type" : "integer",
+              "minimum" : 1,
+              "default" : 1
+            }
+          },
+          {
+            "in" :  "query",
+            "name" : "orderBy",
+            "schema" : {
+              "type" : "string",
+              "default" : "created_at"
+            }
+          },
+          {
+            "in" :  "query",
+            "name" : "orderType",
+            "schema" : {
+              "type" : "string",
+              "default" : "desc"
+            }
+          },
+          {
+            "in" :  "query",
+            "name" : "search",
+            "schema" : {
+              "type" : "string",
+              "default" : ""
+            }
+          },
+          {
+            "in" :  "query",
+            "name" : "categoryID",
+            "schema" : {
+              "type" : "integer",
+              "default" : 0
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "allOf": [
+                    {
+                      "$ref": "#/components/schemas/DefaultResponse"
+                    },
+                    {
+                      "type": "object",
+                      "properties": {
+                        "data": {
+                          "type": "array",
+                          "items": {
+                            "$ref": "#/components/schemas/ContentResponse"
+                          }
+                        }
+                      }
+                    }
+                  ]
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/fe/contents/{contentID}" : {
+      "get": {
+        "description": "Get By ID Contents",
+        "tags": ["fe"],
+        "summary": "Get By ID Contents",
+        "parameters" : [
+          {
+            "in" : "path",
+            "name" : "contentID",
+            "schema" : {
+              "type" : "integer",
+              "minimum" : 1,
+              "default" : 10
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "allOf": [
+                    {
+                      "$ref": "#/components/schemas/DefaultResponse"
+                    },
+                    {
+                      "type": "object",
+                      "properties": {
+                        "data": {
+                            "$ref": "#/components/schemas/ContentResponse"
+                        }
+                      }
+                    }
+                  ]
                 }
               }
             }
