# internal/adapter/handler/content_handler.go
@@ -122,13 +122,27 @@ func (ch *contentHandler) GetContentWithQuery(c *fiber.Ctx) error {
 		search = c.Query("search")
 	}
 
+	categoryID := 0
+	if c.Query("categoryID") != "" {
+		categoryID, err = conv.StringToInt(c.Query("categoryID"))
+		if err != nil {
+			code := "[HANDLER] getContentWithQuery - 3"
+			log.Errorw(code, err)
+			errorResp.Meta.Status = false
+			errorResp.Meta.Message = "Invalid category ID"
+
+			return c.Status(fiber.StatusBadRequest).JSON(errorResp)
+		}
+	}
+
 	reqEntity := entity.QueryString{
 		Limit:     limit,
 		Page:      page,
 		OrderBy:   orderBy,
 		OrderType: orderType,
 		Search:    search,
-		Status: 	"",
+		Status: 	"PUBLISH",
+		CategoryId: int64(categoryID),
 	}
 
 	results, err := ch.contentService.GetContents(c.Context(), reqEntity)
